code/typescript/UniversalScreening/v1/README.md
<img alt="FactSet" src="https://www.factset.com/hubfs/Assets/images/factset-logo.svg" height="56" width="290">

# Universal Screening client library for JavaScript

[![npm](https://img.shields.io/npm/v/@factset/sdk-universalscreening)](https://www.npmjs.com/package/@factset/sdk-universalscreening)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Through the Universal Screening API, you can access the power of FactSet's Universal Screening Application.
Calculate and return the results of your saved Universal Screens.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.1
- Package version: 0.20.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen

## Requirements

* Node.js >= 12

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-universalscreening
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-universalscreening
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=12. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 16
      nvm use 16
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

```javascript
const { ApiClient, DefaultApi } = require('@factset/sdk-universalscreening');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new DefaultApi();
const id = "id_example"; // String | Unique identifier for a screen calculation job

// Call api endpoint
apiInstance.deleteActiveJob(id).then(
  () => {
    console.log('API called successfully.');
  },
  error => {
    console.error(error);
  },
);

```


## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*universalscreening.DefaultApi* | [**deleteActiveJob**](docs/DefaultApi.md#deleteActiveJob) | **DELETE** /v1/calculations/{id} | 
*universalscreening.DefaultApi* | [**deleteAllActiveJobs**](docs/DefaultApi.md#deleteAllActiveJobs) | **DELETE** /v1/calculations | 
*universalscreening.DefaultApi* | [**getAllActiveJobs**](docs/DefaultApi.md#getAllActiveJobs) | **GET** /v1/calculations | 
*universalscreening.DefaultApi* | [**getCalculateResults**](docs/DefaultApi.md#getCalculateResults) | **GET** /v1/calculations/{id} | 
*universalscreening.DefaultApi* | [**pollArchiveOFDB**](docs/DefaultApi.md#pollArchiveOFDB) | **GET** /v1/archive/{id}/status | 
*universalscreening.DefaultApi* | [**pollCalculate**](docs/DefaultApi.md#pollCalculate) | **GET** /v1/calculations/{id}/status | 
*universalscreening.DefaultApi* | [**submitArchiveOFDB**](docs/DefaultApi.md#submitArchiveOFDB) | **POST** /v1/archive | 
*universalscreening.DefaultApi* | [**submitCalculate**](docs/DefaultApi.md#submitCalculate) | **POST** /v1/calculations | 


## Documentation for Models

 - [universalscreening.ErrorArray](docs/ErrorArray.md)
 - [universalscreening.ErrorCode](docs/ErrorCode.md)
 - [universalscreening.ErrorObject](docs/ErrorObject.md)
 - [universalscreening.ForErrorsAndWarningsFoundInScreensContainsTheParamIDTheErrorWarningBelongsTo](docs/ForErrorsAndWarningsFoundInScreensContainsTheParamIDTheErrorWarningBelongsTo.md)
 - [universalscreening.InlineResponse200](docs/InlineResponse200.md)
 - [universalscreening.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [universalscreening.PaginationResponse](docs/PaginationResponse.md)
 - [universalscreening.ResourceStatusResponse](docs/ResourceStatusResponse.md)
 - [universalscreening.ResourceStatusResponseData](docs/ResourceStatusResponseData.md)
 - [universalscreening.ResultsMetadata](docs/ResultsMetadata.md)
 - [universalscreening.ScreenArchiveOFDBParameters](docs/ScreenArchiveOFDBParameters.md)
 - [universalscreening.ScreenArchiveOFDBParametersData](docs/ScreenArchiveOFDBParametersData.md)
 - [universalscreening.ScreenArchiveOFDBParametersDataArchiveOptions](docs/ScreenArchiveOFDBParametersDataArchiveOptions.md)
 - [universalscreening.ScreenCalcParameters](docs/ScreenCalcParameters.md)
 - [universalscreening.ScreenCalcParametersData](docs/ScreenCalcParametersData.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
