code/typescript/UniversalScreening/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Universal Screening client library for JavaScript

[![API Version](https://img.shields.io/badge/api-v2.0.2-blue)](https://developer.factset.com/api-catalog/universal-screening-api)
[![npm](https://img.shields.io/badge/npm-v2.2.1-orange)](https://www.npmjs.com/package/@factset/sdk-universalscreening/v/2.2.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Through the Universal Screening API, you can access the power of FactSet's Universal Screening Application.
Calculate and return the results of your saved Universal Screens.

This TypeScript/JavaScript package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.2
- SDK version: 2.2.1
- Build package: com.factset.sdk.codegen.FactSetJavascriptClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Node.js >= 18

## Installation

### npm

```shell
npm install @factset/sdk-utils @factset/sdk-universalscreening@2.2.1
```

### yarn

```shell
yarn add @factset/sdk-utils @factset/sdk-universalscreening@2.2.1
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Node.js environment
   1. Install and activate Node.js >=18. If you're using [nvm](https://github.com/nvm-sh/nvm):

      ```sh
      nvm install 18
      nvm use 18
      ```

   2. (optional) [Install yarn](https://yarnpkg.com/getting-started/install).
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code


```javascript
const { ApiClient, JobManagementApi } = require('@factset/sdk-universalscreening');
const { ConfidentialClient } = require('@factset/sdk-utils');

const apiClient = ApiClient.instance;

// Examples for each supported authentication method are below,
// choose one that satisfies your use case.

// (Preferred) OAuth 2.0: FactSetOAuth2
// See https://github.com/FactSet/enterprise-sdk#oauth-20
// for information on how to create the app-config.json file
//
// The confidential client instance should be reused in production environments.
// See https://github.com/FactSet/enterprise-sdk-utils-typescript#authentication
// for more information on using the ConfidentialClient class
apiClient.factsetOauth2Client = new ConfidentialClient('/path/to/app-config.json');

// Basic authentication: FactSetApiKey
// See https://github.com/FactSet/enterprise-sdk#api-key
// for information how to create an API key
// const FactSetApiKey = apiClient.authentications['FactSetApiKey'];
// FactSetApiKey.username = 'USERNAME-SERIAL';
// FactSetApiKey.password = 'API-KEY';

const apiInstance = new JobManagementApi();
const id = 123e4567-e89b-12d3-a456-426655440000; // String | Unique identifier for a job. \"Job\" refers to a screen calculation or archival.

// Call api endpoint
apiInstance.deleteActiveJob(id).then(
  () => {
    console.log('API called successfully.');
  },
  error => {
    console.error(error);
  },
);

```


## Using a Proxy

To add a HTTP proxy for the API client, you can set the proxyUrl for the ApiClient instance:

```javascript
const { ApiClient } = require('@factset/sdk-universalscreening');

const apiClient = ApiClient.instance;
apiClient.setProxyUrl('http://username:password@proxy.example.com:8080');
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/universal-screening/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*universalscreening.JobManagementApi* | [**deleteActiveJob**](docs/JobManagementApi.md#deleteActiveJob) | **DELETE** /job/{id} | 
*universalscreening.JobManagementApi* | [**deleteAllActiveJobs**](docs/JobManagementApi.md#deleteAllActiveJobs) | **DELETE** /jobs | 
*universalscreening.JobManagementApi* | [**getAllActiveJobs**](docs/JobManagementApi.md#getAllActiveJobs) | **GET** /jobs | 
*universalscreening.ScreeningOperationsApi* | [**getCalculateResults**](docs/ScreeningOperationsApi.md#getCalculateResults) | **GET** /job/{id} | 
*universalscreening.ScreeningOperationsApi* | [**getExportResults**](docs/ScreeningOperationsApi.md#getExportResults) | **GET** /job/{id}/export | 
*universalscreening.ScreeningOperationsApi* | [**pollCalculate**](docs/ScreeningOperationsApi.md#pollCalculate) | **GET** /job/{id}/status | 
*universalscreening.ScreeningOperationsApi* | [**submitArchiveOFDB**](docs/ScreeningOperationsApi.md#submitArchiveOFDB) | **POST** /job/archive | 
*universalscreening.ScreeningOperationsApi* | [**submitCalculate**](docs/ScreeningOperationsApi.md#submitCalculate) | **POST** /job/calculate | 
*universalscreening.ScreeningOperationsApi* | [**submitExport**](docs/ScreeningOperationsApi.md#submitExport) | **POST** /job/export | 


## Documentation for Models

 - [universalscreening.ActiveJobIDs](docs/ActiveJobIDs.md)
 - [universalscreening.ActiveJobsData](docs/ActiveJobsData.md)
 - [universalscreening.CalculateMetadata](docs/CalculateMetadata.md)
 - [universalscreening.DelimitedOptions](docs/DelimitedOptions.md)
 - [universalscreening.ErrorArray](docs/ErrorArray.md)
 - [universalscreening.ErrorCode](docs/ErrorCode.md)
 - [universalscreening.ErrorObject](docs/ErrorObject.md)
 - [universalscreening.ErrorObjectSource](docs/ErrorObjectSource.md)
 - [universalscreening.ExcelOptions](docs/ExcelOptions.md)
 - [universalscreening.GroupingInfo](docs/GroupingInfo.md)
 - [universalscreening.PaginatedCalculationResponse](docs/PaginatedCalculationResponse.md)
 - [universalscreening.PaginationResponse](docs/PaginationResponse.md)
 - [universalscreening.PdfOptions](docs/PdfOptions.md)
 - [universalscreening.ResourceStatusResponse](docs/ResourceStatusResponse.md)
 - [universalscreening.ResourceStatusResponseData](docs/ResourceStatusResponseData.md)
 - [universalscreening.ResultsMetadata](docs/ResultsMetadata.md)
 - [universalscreening.ScreenArchiveOFDBParameters](docs/ScreenArchiveOFDBParameters.md)
 - [universalscreening.ScreenArchiveOFDBParametersData](docs/ScreenArchiveOFDBParametersData.md)
 - [universalscreening.ScreenArchiveOFDBParametersDataArchiveOptions](docs/ScreenArchiveOFDBParametersDataArchiveOptions.md)
 - [universalscreening.ScreenCalcParameters](docs/ScreenCalcParameters.md)
 - [universalscreening.ScreenCalcParametersData](docs/ScreenCalcParametersData.md)
 - [universalscreening.ScreenExportParameters](docs/ScreenExportParameters.md)
 - [universalscreening.ScreenExportParametersData](docs/ScreenExportParametersData.md)
 - [universalscreening.SubmitExportResponse](docs/SubmitExportResponse.md)
 - [universalscreening.SubmitExportResponseData](docs/SubmitExportResponseData.md)


## Documentation for Authorization



### FactSetApiKey

- **Type**: HTTP basic authentication



### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
